# mormclaw

./: .dockerignore  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  docker-publish.sh  mormsodockerfile
.cargo/: config.toml
.github/workflows/: master-branch-flow.md
crates/mormos-plugin-registry/: Cargo.toml
docs/: SUMMARY.md  actions-source-policy.md  api-paths-reference.md  ci-map.md  config-reference.md  docs-inventory.md  pr-workflow.md  providers-reference.md  release-process.md
docs/design/: context-engine-plugin-registry.md  totp-gateway-login-design.md  totp-gateway-login-ui-design.md
docs/reference/: README.md
scripts/: bootstrap.sh
src/: lib.rs  main.rs
src/agent/: loop_.rs
src/channels/: mod.rs  telegram.rs
src/config/: schema.rs
src/context_engine/: default.rs  mod.rs  wasm_engine.rs  wasm_execution_policy.rs  wasm_spawner.rs
src/gateway/: api.rs  mod.rs
src/integrations/: mod.rs  registry.rs
src/onboard/: wizard.rs
src/peripherals/: mod.rs
src/providers/: chatjimmy.rs  mod.rs
src/security/: pairing.rs
src/tools/: mod.rs  subagent_spawn.rs
templates/rust/context_engine_passthrough/: Cargo.toml
templates/rust/context_engine_passthrough/src/: main.rs
templates/rust/execution_policy_passthrough/: Cargo.toml
templates/rust/execution_policy_passthrough/src/: main.rs
templates/rust/subagent_spawner_passthrough/: Cargo.toml
templates/rust/subagent_spawner_passthrough/src/: main.rs
web/: dist
webmormos/: README.md  index.html  package.json  playwright.config.mjs  vite.config.ts
webmormos/src/: App.tsx
(+27 files in other folders)
