[workspace]

[package]
name = "context-engine-passthrough"
version = "0.1.0"
edition = "2021"
description = "Minimal WASM ContextEngine plugin — no-op passthrough for all 7 hooks."

[[bin]]
name = "context_engine_passthrough"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
