[workspace]

[package]
name = "execution-policy-passthrough"
version = "0.1.0"
edition = "2021"
description = "Minimal WASM ExecutionPolicy plugin — allows all tool calls."

[[bin]]
name = "execution_policy_passthrough"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
