[workspace]

[package]
name = "subagent-spawner-passthrough"
version = "0.1.0"
edition = "2021"
description = "Minimal WASM SubagentSpawner plugin — allows all spawn requests."

[[bin]]
name = "subagent_spawner_passthrough"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
